fix paragraph spacing in list items

--- a/assets/styles/all.scss
+++ b/assets/styles/all.scss
@@ -182,6 +182,9 @@ code {
     padding-left: 1.5em;
     list-style-type: disc;
   }
+  li > p {
+    margin-bottom: 0;
+  }
   table {
     width: 100%;
     text-align: left;
